<resources>
    <string name="app_name">Petrolr</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="distance">Distance</string>
    <string name="time_required">Time Required</string>
    <string name="petrol_price">Price of %1$s:</string>
    <string name="logout">Log Out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="feature_unavailable">That feature is currently unavailable</string>
    <string name="recenter_msg_text">Map re-centered to user position</string>
    <string name="googleapi_unavailable">Google Api Client is not yet ready</string>
    <string name="location_permissions_granted">Location Permissions Granted</string>
    <string name="location_permissions_denied">Location Permissions Denied</string>
    <string name="gooelapi_failed_connection">GoogleApiClient Connection Failed</string>
    <string name="latitude">Latitude: %1$s</string>
    <string name="user_marker">You are here</string>
    <string name="station_list_title">Station List</string>
    <string name="station_item_intent">Selected Station</string>
    <string name="logout_dialog_title">Log Out</string>
    <string name="logout_confirm_msg">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_preferences_intent">User Preferences</string>
    <string name="longitude">Longitude: %1$s</string>
    <string name="accuracy">Accuracy: %1$s</string>
    <string name="distance_km_away">KM AWAY</string>
    <string name="current_location">Current Location</string>
    <string name="destination">Destination</string>
    <string name="generating_markers">Generating Markers…</string>
    <string name="stations">Stations</string>
    <string name="preferred_petrol">Preferred Petrol Type</string>
    <string name="save">SAVE</string>
    <string name="preferences_title">Your Preferences</string>
    <string name="nearest_station">Nearest Station</string>
    <string name="address">Address</string>
    <string name="confirm_change_preferences">\n%1$s\n\nPreferred Station Brands:\n%2$s\n\nAre these settings ok?</string>
    <string name="invalid_preferences_petrol">Please select a preferred petrol type.</string>
    <string name="invalid_preferences_brand">Please select at least one preferred brand.</string>
    <string name="invalid_preferences_message">Please make sure you have\nselected one preferred petrol type and at least one preferred brand.</string>
    <string name="select_all">Select All</string>
    <string name="view_station_details">View Station Details</string>
    <string name="preferred_stations">Preferred Stations</string>
    <string name="non_preferred_stations">Non-Preferred Stations</string>
    <string name="preferences_updated">Your preferences have been updated</string>
    <string name="price_value">RM %1$.2f</string>
    <string name="positive_price_value">+ RM %1.2f</string>
    <string name="negative_price_value">- RM %1.2f</string>
    <string name="petrol_types_available">Petrol Types Available</string>
    <string name="brand">Station Brand</string>
    <string name="go">Go</string>
    <string name="list_separator">\u0020\u0020|\u0020\u0020  </string>
    <string name="navigate">Navigate</string>
    <string name="no_navigation_apps">You do not have any navigation apps</string>
    <string name="unable_receive_location">Location Permissions Disabled.\nUnable to retrieve location updates</string>
    <string name="location_not_changed">Your location has not changed</string>
    <string name="updating_location">Updating User Location…</string>
    <string name="price_history">Petrol Price History</string>
    <string name="current_price">Current Price:</string>
    <string name="previous_prices">Previous Prices</string>
    <string name="since_value">Since %1$s</string>
    <string name="login_failed">Login details incorrect, please try again.</string>
    <string name="username_or_password_empty_message">Please make sure you have filled in\nyour username and password</string>
    <string name="set_preferences_title">Set Your Preferences</string>
    <string name="first_time_set_preferences_message">Welcome and thank you for using Petrolr!\n\nAs this is your first time logging in,\nplease set your petrol and brand preferences so that we can serve you better.</string>
    <string name="ok">OK</string>
    <string name="welcome">Welcome!</string>
    <string name="preferences_not_saved_warning">Your changes have not been saved!\n\nAre you sure you wish to leave this screen?</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="field_must_not_be_empty">%1$s field must not be empty</string>
    <string name="username_exists">That username already exists</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="email">Email Address</string>
    <string name="password_and_confirm_must_match">Password and Confirm Password must match</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="retrieve_password_message">To retrieve your password, please enter your account username:</string>
    <string name="enter_username">Please enter a username</string>
    <string name="no_such_username">No such username</string>
    <string name="email_does_not_match_recorded">Email address does not match registered email</string>
    <string name="your_password_is">Your password is:</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="register_here">Register here</string>
    <string name="have_account">Already have an account?</string>
    <string name="please_enter_field">Please enter your %1$s</string>
    <string name="recover_password">Recover Password</string>
    <string name="enter_email">Please enter an email address</string>
    <string name="change">Change</string>
    <string name="preferred_station_brands">Preferred Station Brands</string>
    <string name="change_preferences_title">Change Preferences</string>
    <string name="change_preferred_petrol_type">Change Preferred Petrol Type</string>
    <string name="change_preferred_brands">Change Preferred Brands</string>
    <string name="none">None</string>
    <string name="cancel">Cancel</string>
    <string name="change_preference_failed">Your changes were not saved.\n%1$s</string>
    <string name="warning">Warning</string>
    <string name="refresh_nearest_stations">Refresh Nearest Stations</string>
    <string name="see_more">See More</string>
    <string name="recenter_camera">Recenter</string>
    <string name="user_location_refreshed">User Location Refreshed</string>
    <string name="failed_retrieve_data">Failed to retrieve app data</string>
    <string name="map_loading">Loading Map…</string>
    <string name="data_loading">Loading Data…</string>
    <string name="stations_loading">Loading Stations…</string>
    <string name="retry">Retry</string>
    <string name="location_update_failed">Location Update Failed. Please make sure your GPS is enabled.</string>
    <string name="error_communicating">Error communicating with server. Please check your Internet connection.</string>
    <string name="logging_in">Logging in…</string>
    <string name="invalid_phone_no">Invalid Phone Number</string>
    <string name="registering">Registering…</string>
    <string name="unavailable">Unavailable</string>
    <string name="account_created_on">Account Created On</string>
    <string name="phone_no">Phone Number</string>
    <string name="go_to">Go to:</string>
    <string name="no_stations">Oops!\nYou do not have any\n%1$s stations.</string>
    <string name="preferred">preferred</string>
    <string name="non_preferred">non-preferred</string>
    <string name="return_to_user_location">Return to User Location</string>
    <string name="developed_by">Developed by Adrian Tan</string>
    <string name="circa">circa 2018</string>
</resources>
