<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/window_white_foggy"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/stationImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        tools:text="Name"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        style="@style/ListHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textAlignment="center" />

    <View style="@style/ListSeparator" />

    <TextView
        android:id="@+id/brandTextView"
        style="@style/StationDetailsBodyBlock"
        android:textAlignment="center" />

    <TextView
        style="@style/ListHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textAlignment="center" />

    <View style="@style/ListSeparator" />

    <TextView
        android:id="@+id/addressTextView"
        style="@style/StationDetailsBodyBlock"
        android:textAlignment="center" />

    <TextView
        style="@style/ListHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/petrol_types_available"
        android:textAlignment="center" />

    <View style="@style/ListSeparator" />

    <TextView
        android:id="@+id/petrolTypesTextView"
        style="@style/StationDetailsBodyBlock"
        android:textAlignment="center" />

    </LinearLayout>

</ScrollView>