<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="475dp"
        android:background="@drawable/gradient_background">

    </FrameLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="400dp"
        android:src="@drawable/ic_user" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="475dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="85dp">

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="adriantan" />

            <TextView
                style="@style/ListHeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="center" />

            <View
                style="@style/ListSeparator"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:id="@+id/emailTextView"
                style="@style/StationDetailsBodyBlock"
                android:textAlignment="center"
                tools:text="adrian@apptivitylab.com" />

            <TextView
                style="@style/ListHeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_no"
                android:textAlignment="center" />

            <View
                style="@style/ListSeparator"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:id="@+id/phoneNoTextView"
                style="@style/StationDetailsBodyBlock"
                android:textAlignment="center"
                tools:text="018-5564433" />

            <TextView
                style="@style/ListHeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_created_on"
                android:textAlignment="center" />

            <View
                style="@style/ListSeparator"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:id="@+id/createdOnTextView"
                style="@style/StationDetailsBodyBlock"
                android:textAlignment="center"
                tools:text="18 February 2018" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>